@@ -3,31 +3,32 @@ package com.masantello.bookstoremanager.validation.user;
 import com.masantello.bookstoremanager.dtos.UserDto;
 import com.masantello.bookstoremanager.validation.AbstractValidator;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Component
 public class UserCreateValidatorBeans {
 
     private final UserAlreadyExistsValidator userAlreadyExistsValidator;
     private final UserMandatoryFieldsValidator userMandatoryFieldsValidator;
-    private final UserUniqueFieldsValidator userPasswordAlreadyRegisteredValidator;
+    private final UserUniqueFieldsValidator userUniqueFieldsValidator;
 
     public UserCreateValidatorBeans(UserAlreadyExistsValidator userAlreadyExistsValidator,
                                     UserMandatoryFieldsValidator userMandatoryFieldsValidator,
-                                    UserUniqueFieldsValidator userPasswordAlreadyRegisteredValidator) {
+                                    UserUniqueFieldsValidator userUniqueFieldsValidator) {
         this.userAlreadyExistsValidator = userAlreadyExistsValidator;
         this.userMandatoryFieldsValidator = userMandatoryFieldsValidator;
-        this.userPasswordAlreadyRegisteredValidator = userPasswordAlreadyRegisteredValidator;
+        this.userUniqueFieldsValidator = userUniqueFieldsValidator;
     }
 
     @Bean("createUserValidator")
+    @Scope("prototype")
     public AbstractValidator<UserDto> abstractAuditUserValidator() {
         return AbstractValidator.link(
                 userAlreadyExistsValidator,
-                List.of(userMandatoryFieldsValidator,
-                        userPasswordAlreadyRegisteredValidator)
+                Arrays.asList(userMandatoryFieldsValidator, userUniqueFieldsValidator)
         );
     }
 }
